--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -23,6 +23,9 @@ markComment: >
   recent activity. It will be closed if no further activity occurs. Thank you
   for your contributions.
 
+# Comment to post when closing a stale issue. Set to `false` to disable
+closeComment: false
+
 # Optionally, specify configuration settings that are specific to just 'issues' or 'pulls':
 pulls:
   markComment: >
