--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -15,7 +15,7 @@ exemptLabels:
   - WIP
 
 # Label to use when marking as stale
-staleLabel: wontfix
+staleLabel: stale
 
 # Comment to post when marking as stale. Set to `false` to disable
 markComment: >
