--- a/themebuilder-scss/package.json
+++ b/themebuilder-scss/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "clean-css": "^4.2.1",
+    "fibers": "^4.0.2",
     "less-plugin-autoprefix": "^2.0.0",
     "semver": "^5.6.0"
   },
@@ -23,10 +24,10 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "dart-sass": "^1.25.0",
     "express": "^4.16.4",
     "less": "3.9.0",
     "mocha": "^5.2.0",
-    "mock-require": "^3.0.2",
-    "node-sass": "^4.9.3"
+    "mock-require": "^3.0.2"
   }
 }
