--- a/themebuilder-scss/package.json
+++ b/themebuilder-scss/package.json
@@ -17,6 +17,7 @@
     "clean-css": "^4.2.1",
     "fibers": "^4.0.2",
     "less-plugin-autoprefix": "^2.0.0",
+    "sass": "^1.26.3",
     "semver": "^5.6.0"
   },
   "scripts": {
@@ -24,7 +25,6 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "dart-sass": "^1.25.0",
     "express": "^4.16.4",
     "less": "3.9.0",
     "mocha": "^5.2.0",
