--- a/testing/.eslintrc
+++ b/testing/.eslintrc
@@ -13,7 +13,10 @@
     "plugins": [
         "qunit"
     ],
-    "extends": "plugin:qunit/recommended",
+    "extends": [
+        "plugin:qunit/recommended",
+        "plugin:qunit/two"
+    ],
     "rules": {
         "qunit/assert-args": "error",
         "qunit/literal-compare-order": "error",
@@ -24,6 +27,7 @@
         "qunit/no-ok-equality": "error",
         "qunit/no-only": "error",
         "qunit/no-setup-teardown": "error",
+        "qunit/no-global-module-test": "off",
         "qunit/require-expect": "off",
         "qunit/resolve-async": "off"
     }
