--- a/testing/.eslintrc
+++ b/testing/.eslintrc
@@ -19,7 +19,7 @@
     ],
     "rules": {
         "qunit/no-arrow-tests": "error",
-        "qunit/no-commented-tests": "warn",
+        "qunit/no-commented-tests": "error",
         "qunit/no-identical-names": "warn",
         "qunit/no-global-module-test": "off",
         "qunit/require-expect": "off",
