Add "type/enhancement" to the exempt labels [Stale bot]

--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -12,6 +12,7 @@ daysUntilClose: 5
 # WIP - pull requests that have "work in progress" status
 exemptLabels:
   - type/discussion
+  - type/enhancement
   - WIP
   - roadmap
 
