--- a/.eslintrc
+++ b/.eslintrc
@@ -60,7 +60,7 @@
         "no-whitespace-before-property": "error",
         "object-curly-spacing": [ "error", "always" ],
         "one-var": ["error", "never"],
-        "prefer-const": "warn",
+        "prefer-const": "error",
         "semi-spacing": "error",
         "semi": "error",
         "space-before-blocks": "error",
