Base TS compilation (code compiles)

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 /js/localization/cldr-data
 /themebuilder/data/less
 /themebuilder/data/metadata
+/themebuilder-scss/data/scss
+/themebuilder-scss/data/metadata
+/themebuilder-scss/dist
 /scss
 bin
 node_modules
