--- a/themebuilder-scss/package.json
+++ b/themebuilder-scss/package.json
@@ -13,6 +13,7 @@
   "repository": "https://github.com/DevExpress/DevExtreme",
   "license": "SEE LICENSE IN README.md",
   "dependencies": {
+    "@types/fibers": "^3.1.0",
     "bootstrap": "^4.3.1",
     "clean-css": "^4.2.1",
     "fibers": "^4.0.2",
@@ -21,13 +22,25 @@
     "semver": "^5.6.0"
   },
   "scripts": {
-    "test": "mocha -R spec tests/*-spec.js"
+    "test": "mocha -R spec tests/*-spec.js",
+    "test1": "mocha -r ts-node/register tests/compiler-spec.ts",
+    "build": "npm run build-ts && npm run copy-static-assets",
+    "build-ts": "tsc",
+    "copy-static-assets": ""
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/clean-css": "^4.2.1",
+    "@types/mocha": "^7.0.2",
+    "@types/node-sass": "^4.11.0",
     "chai": "^4.1.2",
+    "eslint": "^6.8.0",
     "express": "^4.16.4",
     "less": "3.9.0",
     "mocha": "^5.2.0",
-    "mock-require": "^3.0.2"
+    "sinon": "^9.0.2",
+    "ts-mock-imports": "^1.3.0",
+    "ts-node": "^8.9.1",
+    "typescript": "^3.8.3"
   }
 }
