--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 /themebuilder-scss/data/scss
 /themebuilder-scss/data/metadata
 /themebuilder-scss/dist
+/themebuilder-scss/coverage
+/themebuilder-scss/build
 /scss
 bin
 node_modules
