--- a/themebuilder-scss/tsconfig.json
+++ b/themebuilder-scss/tsconfig.json
@@ -5,6 +5,7 @@
         "allowSyntheticDefaultImports": true,
         "target": "es6",
         "noImplicitAny": true,
+        "allowJs": true,
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
@@ -18,10 +19,12 @@
                 "modules/types/*"
             ],
             
+            
         }
     },
     "include": [
         "modules/**/*",
+        "generator/**/*",
         "data/**/*"
     ]
 }
