--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/jest": "^24.0.24",
     "@types/jquery": "^2.0.34",
     "@types/react": "16.9.16",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
     "angular": "^1.6.10",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
@@ -59,13 +60,17 @@
     "cldrjs": "^0.5.0",
     "cssom": "^0.4.4",
     "del": "^2.2.2",
-    "devextreme-generator": "^1.0.58",
     "devextreme-cldr-data": "^1.0.2",
+    "devextreme-generator": "^1.0.58",
     "devextreme-internal-tools": "~1.2.24",
     "enzyme": "^3.11.0",
     "enzyme-adapter-preact-pure": "^2.2.0",
     "eslint": "^6.8.0",
+    "eslint-config-airbnb-typescript": "^7.2.1",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-jest-formatting": "^1.2.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-qunit": "^4.0.0",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-spellcheck": "0.0.11",
@@ -136,11 +141,8 @@
     "testcafe": "^1.2.0",
     "through2": "^2.0.1",
     "ts-jest": "^24.2.0",
-    "tslint": "^6.0.0",
-    "underscore": "^1.9.2",
-    "tslint-config-airbnb": "^5.11.2",
-    "tslint-react": "^4.2.0",
     "typescript": "^3.7.2",
+    "underscore": "^1.9.2",
     "vinyl-named": "^1.1.0",
     "webpack": "^3.10.0",
     "webpack-stream": "^3.2.0",
@@ -153,7 +155,7 @@
   "scripts": {
     "lint": "npm-run-all -p -c lint-js lint-css",
     "lint-js": "eslint .",
-    "lint-ts": "tslint -p tsconfig.json",
+    "lint-ts": "eslint ./testing/jest/**/*.ts ./testing/jest/**/*.tsx ./js/renovation/**/*.tsx ./js/renovation/**/*.ts",
     "lint-css": "stylelint styles",
     "lint-staged": "lint-staged && npm run lint-ts",
     "build": "dotnet build build/build-dotnet.sln && gulp default",
