use eslint-config-devextreme package

--- a/js/renovation/.eslintrc
+++ b/js/renovation/.eslintrc
@@ -1,21 +1,8 @@
 {
     "extends": [
-        "plugin:@typescript-eslint/recommended",
-        "airbnb-typescript"
-    ],
-    "plugins": [
-        "@typescript-eslint"
+        "devextreme/renovation-declarations"
     ],
     "rules": {
-         // Declarations used for generate target components in the development mode
-         "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
-
-         // Declaration should contain two classes - component class and props class
-         "max-classes-per-file": ["error", 2],
-
-         // Declaration is not a real React component and doesn"t need it
-         "react/react-in-jsx-scope": ["off"],
-
          "@typescript-eslint/no-unused-expressions": ["error", { "allowShortCircuit": true, "allowTernary": true }]
     }
 }
