Change folders structure, make all test runnable again

--- a/.eslintrc
+++ b/.eslintrc
@@ -132,6 +132,7 @@
                     "eol",          // end of line
                     "etag",         // HTTP header
                     "eula",         // EULA
+                    "globals",      // jest settings
                     "jsrender",     // JsRender template engine
                     "hsl",          // HSL color
                     "hsv",          // HSV color
