--- a/themebuilder-scss/package.json
+++ b/themebuilder-scss/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "test": "jest --coverage --verbose --detectOpenHandles",
     "clean-metadata": "",
-    "generate-metadata": "ts-node --files=true metadata/generate.ts",
+    "generate-metadata": "ts-node --files=true src/metadata/generate.ts",
     "build-ts": "tsc",
     "build": "npm run generate-metadata && npm run build-ts"
   },
@@ -36,7 +36,7 @@
     "sinon": "^9.0.2",
     "ts-jest": "^25.5.0",
     "ts-mock-imports": "^1.3.0",
-    "ts-node": "^8.9.1",
+    "ts-node": "^8.10.1",
     "typescript": "^3.8.3"
   }
 }
