--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,16 +41,22 @@ jobs:
         $runner = Start-Process -FilePath dotnet -ArgumentList './testing/runner/bin/runner.dll --single-run' -passthru -RedirectStandardOutput "output.txt"
         Write-Host "Runner starting"
         $runner_host = "http://localhost:20050"
-        $request = [System.Net.WebRequest]::Create($runner_host)
-        $request.Method = "HEAD"
-        $request.Timeout = 30000
-        $response = $request.GetResponse()
-        $status_code = [int]$response.StatusCode
-        If ($status_code -eq 200) {
-            Write-Host "Site is OK!"
+        try {
+          $request = [System.Net.WebRequest]::Create($runner_host)
+          $request.Method = "HEAD"
+          $request.Timeout = 30000
+          $response = $request.GetResponse()
+          $status_code = [int]$response.StatusCode
+          If ($status_code -eq 200) {
+              Write-Host "Site is OK!"
+          }
+          Else {
+              Write-Host "The Site may be down, please check!"
+          }
         }
-        Else {
-            Write-Host "The Site may be down, please check!"
+        catch {
+          $error_message = $_.Exception.Message
+          Write-Host error_message
         }
         $response.Close()
         Write-Host "Runner started"
