--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,24 +41,29 @@ jobs:
         $runner = Start-Process -FilePath dotnet -ArgumentList './testing/runner/bin/runner.dll --single-run' -passthru -RedirectStandardOutput "output.txt"
         Write-Host "Runner starting"
         $runner_host = "http://localhost:20050"
-        try {
-          $request = [System.Net.WebRequest]::Create($runner_host)
-          $request.Method = "HEAD"
-          $request.Timeout = 30000
-          $response = $request.GetResponse()
-          $status_code = [int]$response.StatusCode
-          If ($status_code -eq 200) {
-              Write-Host "Site is OK!"
+        For ($i=0; $i -le 10; $i++) {
+          try {
+            $request = [System.Net.WebRequest]::Create($runner_host)
+            $request.Method = "HEAD"
+            $request.Timeout = 30000
+            $response = $request.GetResponse()
+            $status_code = [int]$response.StatusCode
+            If ($status_code -eq 200) {
+                Write-Host "Site is OK!"
+            }
+            Else {
+                Write-Host "The Site may be down, please check!"
+            }
+            $response.Close()
+            break
           }
-          Else {
-              Write-Host "The Site may be down, please check!"
+          catch {
+            Write-Host "Attempt $i"
+            $error_message = $_.Exception.Message
+            Write-Host $error_message
+            Start-Sleep -s 1
           }
         }
-        catch {
-          $error_message = $_.Exception.Message
-          Write-Host error_message
-        }
-        $response.Close()
         Write-Host "Runner started"
         $url = "$runner_host/run?notimers=true&nojquery=true&constellation=$env:CONSTEL"
         & "C:\Program Files\Internet Explorer\iexplore.exe" "$url"
