--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "devextreme-cldr-data": "^1.0.2",
     "devextreme-internal-tools": "~1.2.0",
     "eslint": "^6.0.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-qunit": "^4.0.0",
     "eslint-plugin-spellcheck": "0.0.11",
     "exceljs": "3.3.1",
