GitHub Actions CI: Get QUnit runner port from ports.json config

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,7 +39,8 @@ jobs:
       run: |
         $runner = Start-Process -FilePath dotnet -ArgumentList './testing/runner/bin/runner.dll --single-run' -PassThru -NoNewWindow
         Write-Host "Runner starting"
-        $runner_host = "http://localhost:20050"
+        $runner_port = (Get-Content ports.json | ConvertFrom-Json).qunit
+        $runner_host = "http://localhost:$runner_port"
         $attempt_count = 30
         For ($i=0; $i -lt $attempt_count; $i++) {
           try {
