--- a/themebuilder-scss/package.json
+++ b/themebuilder-scss/package.json
@@ -15,19 +15,28 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "clean-css": "^4.2.1",
-    "fibers": "^4.0.2",
-    "less-plugin-autoprefix": "^2.0.0",
     "sass": "^1.26.3",
     "semver": "^5.6.0"
   },
   "scripts": {
-    "test": "mocha -R spec tests/*-spec.js"
+    "test": "jest --coverage --verbose --detectOpenHandles",
+    "clean-metadata": "",
+    "generate-metadata": "ts-node --files=true src/metadata/generate.ts",
+    "build-ts": "tsc",
+    "build": "npm run generate-metadata && npm run build-ts"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "@types/clean-css": "^4.2.1",
+    "@types/jest": "^25.2.1",
+    "@types/node-sass": "^4.11.0",
+    "eslint": "^6.8.0",
     "express": "^4.16.4",
+    "jest": "^25.4.0",
     "less": "3.9.0",
-    "mocha": "^5.2.0",
-    "mock-require": "^3.0.2"
+    "sinon": "^9.0.2",
+    "ts-jest": "^25.5.0",
+    "ts-mock-imports": "^1.3.0",
+    "ts-node": "^8.10.1",
+    "typescript": "^3.8.3"
   }
 }
