Add linter to the scss themebuilder

--- a/themebuilder-scss/tsconfig.json
+++ b/themebuilder-scss/tsconfig.json
@@ -21,7 +21,8 @@
     },
     "include": [
         "src/modules/*",
-        "src/data/*",
-        "src/types/*"
+        "src/data/**/*",
+        "src/types/*",
+        "src/metadata/*"
     ]
 }
