--- a/.eslintignore
+++ b/.eslintignore
@@ -2,5 +2,5 @@ artifacts/*
 js/viz/docs/*
 node_modules/*
 testing/helpers/sinon/*
-/themebuilder/data/metadata/*
-/themebuilder-scss/*
+themebuilder/data/metadata/*
+themebuilder-scss/**/*
