Move dx-tools on tag stable (#12972)

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "cldrjs": "^0.5.0",
     "del": "^2.2.2",
     "devextreme-cldr-data": "^1.0.2",
-    "devextreme-internal-tools": "~1.2.0",
+    "devextreme-internal-tools": "stable",
     "eslint": "^7.0.0",
     "eslint-plugin-qunit": "^4.0.0",
     "eslint-plugin-spellcheck": "0.0.11",
