--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,6 @@
 {
     "extends": "stylelint-config-standard",
-    "ignoreFiles": "!**/*.{css,less}",
+    "ignoreFiles": "!**/*.{css,less,scss}",
     "rules": {
         "indentation": [4, { "ignore": ["inside-parens"] }],
         "max-empty-lines": 2,
