--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-qunit": "^4.0.0",
     "eslint-plugin-spellcheck": "0.0.11",
     "exceljs": "3.3.1",
+    "fibers": "^5.0.0",
     "globalize": "^1.3.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
@@ -109,6 +110,7 @@
     "pre-commit": "^1.2.2",
     "qunitjs": "^2.0.1",
     "run-sequence": "^1.1.5",
+    "sass": "^1.26.5",
     "shelljs": "^0.8.3",
     "string-replace-loader": "^2.1.1",
     "stylelint": "^13.1.0",
