--- a/themebuilder-scss/package.json
+++ b/themebuilder-scss/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "clean-css": "^4.2.1",
+    "less": "^3.9.0",
     "sass": "^1.26.3",
     "semver": "^5.6.0"
   },
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/clean-css": "^4.2.1",
     "@types/jest": "^25.2.1",
+    "@types/less": "^3.0.1",
     "@types/node-sass": "^4.11.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "eslint": "^7.0.0",
@@ -42,7 +44,6 @@
     "eslint-plugin-react": "^7.20.0",
     "express": "^4.16.4",
     "jest": "^25.4.0",
-    "less": "3.9.0",
     "sinon": "^9.0.2",
     "ts-jest": "^25.5.0",
     "ts-node": "^8.10.1",
