Fix forgotten Docker env

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,10 @@ script:
     -e CONSTEL=$CONSTEL
     -e COMPONENT=$COMPONENT
     -e JQUERY=$JQUERY
+    -e PERF=$PERF
+    -e TZ=$TZ
+    -e MOBILE_UA=$MOBILE_UA
+    -e QUARANTINE_MODE=$QUARANTINE_MODE
     -v $TRAVIS_BUILD_DIR:/devextreme
     docker.io/devexpress/devextreme-build:20_2
     ./docker-ci.sh
