--- a/themebuilder-scss/tsconfig.json
+++ b/themebuilder-scss/tsconfig.json
@@ -6,6 +6,7 @@
         "target": "es6",
         "noImplicitAny": true,
         "allowJs": true,
+        "resolveJsonModule": true,
         "moduleResolution": "node",
         "outDir": "dist",
         "baseUrl": ".",
