Remove own themebuilder linter

--- a/.eslintignore
+++ b/.eslintignore
@@ -8,5 +8,6 @@ testing/helpers/sinon/*
 *.j.d.ts
 playground/*
 themebuilder/data/metadata/*
-themebuilder-scss/**/*
+themebuilder-scss/dist/*
+themebuilder-scss/coverage/*
 js/bundles/dx.custom.js
