--- a/themebuilder-scss/package.json
+++ b/themebuilder-scss/package.json
@@ -22,9 +22,7 @@
     "semver": "^5.6.0"
   },
   "scripts": {
-    "test-code": "jest --coverage --verbose --detectOpenHandles",
-    "lint": "eslint --config .eslintrc-themebuilder .",
-    "test": "npm run lint && npm run test-code",
+    "test": "jest --coverage --verbose --detectOpenHandles",
     "clean-metadata": "",
     "generate-metadata": "ts-node --files=true src/metadata/generate.ts",
     "build-ts": "tsc",
@@ -35,15 +33,6 @@
     "@types/jest": "^25.2.1",
     "@types/less": "^3.0.1",
     "@types/node-sass": "^4.11.0",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb-typescript": "^7.2.1",
-    "eslint-config-devextreme": "^0.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.11.0",
-    "eslint-plugin-jest-formatting": "^1.2.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.20.0",
     "express": "^4.16.4",
     "jest": "^25.4.0",
     "sinon": "^9.0.2",
