Scss themebuilder: make compiler async and build package

--- a/.eslintignore
+++ b/.eslintignore
@@ -10,4 +10,5 @@ playground/*
 themebuilder/data/metadata/*
 themebuilder-scss/dist/*
 themebuilder-scss/coverage/*
+themebuilder-scss/src/data/metadata/*
 js/bundles/dx.custom.js
