--- a/themebuilder-scss/package.json
+++ b/themebuilder-scss/package.json
@@ -22,7 +22,7 @@
     "semver": "^5.6.0"
   },
   "scripts": {
-    "test": "jest --coverage --verbose --detectOpenHandles",
+    "test": "jest --coverage --verbose",
     "copy-resources": "ts-node --files=true src/tools/copy-resources.ts",
     "generate-metadata": "ts-node --files=true src/metadata/generate.ts",
     "build-ts": "tsc",
