Make 'option' return props from preact component

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,8 @@
       "name": "Jest Tests",
       "program": "${workspaceRoot}/node_modules/jest/bin/jest.js",
       "args": [
-        "--runInBand"
+        "--runInBand",
+        "--no-cache"
       ],
       "runtimeArgs": [
         "--harmony"
