--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "devexpress-gantt": "1.0.1",
     "jszip": "^2.0.0 || ^3.0.0",
     "quill": "^1.3.7",
+    "rrule": "^2.6.4",
+    "es6-object-assign": "^1.1.0",
     "showdown": "^1.8.6",
     "turndown": "^6.0.0"
   },
