--- a/themebuilder-scss/package.json
+++ b/themebuilder-scss/package.json
@@ -13,6 +13,7 @@
   "repository": "https://github.com/DevExpress/DevExtreme",
   "license": "SEE LICENSE IN README.md",
   "dependencies": {
+    "@types/clean-css": "^4.2.2",
     "autoprefixer": "^9.8.0",
     "bootstrap": "^4.3.1",
     "clean-css": "^4.2.3",
