Make jQuery widget backward compatible with old one

--- a/js/renovation/.eslintrc
+++ b/js/renovation/.eslintrc
@@ -1,5 +1,6 @@
 {
-    "extends": [
-        "devextreme/renovation-declarations"
-    ]
+    "overrides": [{
+        "files": ["*.ts", "*.tsx"],
+        "extends": ["devextreme/renovation-declarations"]
+    }]
 }
