--- a/.editorconfig
+++ b/.editorconfig
@@ -7,5 +7,5 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 4
 
-[*.{json,yml,code-workspace}]
+[*.{json,yml,ts,tsx,code-workspace}]
 indent_size = 2
