--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-spellcheck": "0.0.11",
     "exceljs": "3.3.1",
+    "expect": "^26.1.0",
     "fibers": "^5.0.0",
     "globalize": "^1.3.0",
     "gulp": "^4.0.2",
