--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,14 @@
   "exclude": [
     "artifacts",
     "node_modules",
-    "**/dist"
+    "**/dist",
+    "playground"
+  ],
+  "include": [
+    "js/renovation",
+    "themebuilder-scss",
+    "themebuilder",
+    "testing/jest",
+    "testing/testcafe"
   ]
 }
