Renovation: Remove import h in declarations

--- a/.eslintignore
+++ b/.eslintignore
@@ -11,3 +11,4 @@ themebuilder-scss/dist/*
 themebuilder-scss/coverage/*
 themebuilder-scss/src/data/metadata/*
 js/bundles/dx.custom.js
+testing/jest/utils/transformers/*
