--- a/testing/.babelrc
+++ b/testing/.babelrc
@@ -1,7 +1,7 @@
 {
     "presets": [["@babel/preset-env", { "modules": false }]],
     "plugins": [
-        ["@babel/plugin-transform-modules-commonjs", { "strict": false, "allowTopLevelThis": true }, "add-module-exports"],
+        ["transform-es2015-modules-commonjs", { "strict": false, "allowTopLevelThis": true }, "add-module-exports"],
         "@babel/plugin-proposal-nullish-coalescing-operator", "@babel/plugin-proposal-optional-chaining"
     ],
     "ignore": ["**/*.json"]
