--- a/.eslintrc
+++ b/.eslintrc
@@ -99,5 +99,10 @@
         "files": ["*.ts", "*.tsx"],
         "parser": "@typescript-eslint/parser",
         "extends": ["devextreme/typescript"]
+    }, {
+        "files": ["./js/**/*.js"],
+        "rules": {
+            "import/no-commonjs": "error"
+        }
     }]
 }
