Revert "Generate preact components into artifacts only (#13694)"
This reverts commit d734a1e52370799be30f02f769a3e5d4d39820af.

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@
 /js/bundles/dx.custom.js
 /js/localization/default_messages.js
 /js/localization/cldr-data
-/js/renovation/**/*.j.tsx
+/js/renovation/**/*.p.d.ts
+/js/renovation/**/*.p.js
+/js/renovation/**/*.j.d.ts
+/js/renovation/**/*.j.js
 bin
 node_modules
 obj
