--- a/package.json
+++ b/package.json
@@ -162,8 +162,8 @@
     "lint-ts": "eslint --ext .tsx,.ts .",
     "lint-css": "stylelint scss",
     "lint-staged": "lint-staged",
-    "build": "dotnet build build/build-dotnet.sln && gulp default",
-    "build-dist": "dotnet build build/build-dotnet.sln && gulp default --uglify",
+    "build": "dotnet build build/build-dotnet.sln && RENOVATION_STATE=true gulp default",
+    "build-dist": "dotnet build build/build-dotnet.sln && RENOVATION_STATE=true gulp default --uglify",
     "build-themes": "gulp style-compiler-themes",
     "build:react": "gulp generate-react",
     "build:react:watch": "gulp generate-react-watch",
