--- a/jest.tsconfig.json
+++ b/jest.tsconfig.json
@@ -1,8 +1,8 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
       "jsx": "react",
       "jsxFactory": "h",
       "target": "ES2019"
-  },
+  }
 }
