Code coverage - exclude jquery wrappers

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /js/localization/default_messages.js
 /js/localization/cldr-data
 /js/renovation/**/*.j.tsx
+/js/renovation/code_coverage
 bin
 node_modules
 obj
