--- a/.drone.yml
+++ b/.drone.yml
@@ -68,4 +68,5 @@ matrix:
     - { TARGET: test_testcafe, COMPONENT: editors }
     - { TARGET: test_testcafe, COMPONENT: navigation }
     - { TARGET: test_jest }
+    - { TARGET: native_components }
     - { TARGET: test_scss }
