--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,7 @@ env:
     - TARGET=test_testcafe COMPONENT=editors
     - TARGET=test_testcafe COMPONENT=navigation
     - TARGET=test_jest
+    - TARGET=native_components
     - TARGET=test_scss
 
 cache:
