--- a/js/renovation/.eslintrc
+++ b/js/renovation/.eslintrc
@@ -1,10 +1,10 @@
 {
     "overrides": [{
-        "files": ["*.ts", "*.tsx"],
+        "files": ["*.ts?(x)"],
         "extends": ["devextreme/renovation-declarations"],
         "excludedFiles": "**/__tests__/**/*"
     }, {
-        "files": ["**/__tests__/**/*.ts", "**/__tests__/**/*.tsx"],
+        "files": ["**/__tests__/**/*.[tj]s?(x)"],
         "extends": ["devextreme/jest"],
         "settings": {
             "react": { "pragma": "h" }
