--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -19,6 +19,14 @@
         "selector-max-id": 0,
         "selector-class-pattern": "dx-[a-z0-9-]+",
         "at-rule-no-unknown": null,
-        "scss/at-rule-no-unknown": true
+        "scss/at-rule-no-unknown": true,
+        "scss/at-if-no-null": true,
+        "scss/at-import-no-partial-leading-underscore": true,
+        "scss/at-import-partial-extension": "never",
+        "scss/at-mixin-argumentless-call-parentheses": "always",
+        "scss/at-mixin-parentheses-space-before": "never",
+        "scss/at-rule-conditional-no-parentheses": true,
+        "scss/dollar-variable-colon-space-after": "always-single-line",
+        "scss/dollar-variable-colon-space-before": "never"
     }
 }
