--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -32,6 +32,9 @@
         "scss/double-slash-comment-empty-line-before": "always",
         "scss/double-slash-comment-whitespace-inside": "always",
         "scss/dimension-no-non-numeric-values": true,
-        "scss/map-keys-quotes": "always"
+        "scss/map-keys-quotes": "always",
+        "scss/operator-no-newline-before": true,
+        "scss/operator-no-unspaced": true,
+        "scss/no-duplicate-mixins": true
     }
 }
