Change stylelint rules for variables and mixins

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -25,11 +25,12 @@
         "scss/at-import-partial-extension": "never",
         "scss/at-mixin-argumentless-call-parentheses": "always",
         "scss/at-mixin-parentheses-space-before": "never",
+        "scss/at-mixin-pattern": "^[a-z][0-9a-z-]*$",
         "scss/at-rule-conditional-no-parentheses": true,
         "scss/dollar-variable-colon-space-after": "always-single-line",
         "scss/dollar-variable-colon-space-before": "never",
         "scss/dollar-variable-no-missing-interpolation": true,
-        "scss/dollar-variable-pattern": "[0-9a-z-]*",
+        "scss/dollar-variable-pattern": "^[a-z][0-9a-z-]*$",
         "scss/double-slash-comment-empty-line-before": "always",
         "scss/double-slash-comment-whitespace-inside": "always",
         "scss/dimension-no-non-numeric-values": true,
