--- a/themebuilder-scss/package.json
+++ b/themebuilder-scss/package.json
@@ -14,9 +14,11 @@
   "license": "SEE LICENSE IN README.md",
   "dependencies": {
     "@types/clean-css": "^4.2.2",
+    "@types/fibers": "^3.1.0",
     "autoprefixer": "^9.8.0",
     "bootstrap": "^4.3.1",
     "clean-css": "^4.2.3",
+    "fibers": "^5.0.0",
     "less": "^3.9.0",
     "postcss": "^7.0.31",
     "sass": "^1.26.3",
