--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-qunit": "^4.0.0",
-    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react": "7.20.3",
     "eslint-plugin-spellcheck": "0.0.11",
     "exceljs": "3.3.1",
     "fibers": "^5.0.0",
