--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "hogan.js": "3.0.2",
     "intl": "^1.2.5",
     "jest": "^24.9.0",
+    "jest-each": "^26.1.0",
     "jquery": "^3.5.1",
     "jquery.1": "^1.0.0",
     "jquery.2": "^1.0.0",
