--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "rrule": "^2.6.4",
     "es6-object-assign": "^1.1.0",
     "showdown": "^1.8.6",
-    "turndown": "^6.0.0"
+    "turndown": "^6.0.0",
+    "preact": "^10.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
@@ -127,7 +128,6 @@
     "nconf": "^0.10.0",
     "npm-run-all": "^4.1.5",
     "pre-commit": "^1.2.2",
-    "preact": "^10.4.5",
     "qunitjs": "^2.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
