--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "devextreme-generator": "1.0.96",
     "devextreme-internal-tools": "stable",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-preact-pure": "^2.2.0",
+    "enzyme-adapter-preact-pure": "2.2.0",
     "eslint": "^7.3.1",
     "eslint-config-airbnb-typescript": "^7.2.1",
     "eslint-config-devextreme": "^0.1.6",
