--- a/js/renovation/.eslintrc
+++ b/js/renovation/.eslintrc
@@ -7,7 +7,7 @@
         "files": ["**/__tests__/**/*.ts?(x)", "**/test_utils/**/*.ts?(x)"],
         "extends": ["devextreme/jest"],
         "settings": {
-            "react": { "pragma": "h" }
+            "react": { "pragma": "React.createElement" }
         }
     }]
 }
