--- a/js/renovation/.eslintrc
+++ b/js/renovation/.eslintrc
@@ -5,9 +5,6 @@
         "excludedFiles": "**/__tests__/**/*"
     }, {
         "files": ["**/__tests__/**/*.ts?(x)", "**/test_utils/**/*.ts?(x)"],
-        "extends": ["devextreme/jest"],
-        "settings": {
-            "react": { "pragma": "React.createElement" }
-        }
+        "extends": ["devextreme/jest"]
     }]
 }
