--- a/js/.eslintrc
+++ b/js/.eslintrc
@@ -8,6 +8,15 @@
             {
                 "patterns": ["*.js"]
             }
-        ]
+        ],
+        "no-restricted-imports": [ "error", {
+            "paths": [
+                { "name": "jquery"},
+                { "name": "angular"},
+                { "name": "knockout"},
+                { "name": "globalize"}
+            ],
+            "patterns": ["jquery/*", "angular/*", "knockout/*", "globalize/*"]
+        }]
     }
 }
