--- a/package.json
+++ b/package.json
@@ -182,8 +182,7 @@
     "validate-declarations": "dx-tools validate-declarations --js-scripts ./js",
     "test-testcafe": "node ./testing/testcafe/runner",
     "test-jest": "jest --coverage",
-    "test-jest:watch": "jest --watch",
-    "aa": "gulp js-bundles-dev"
+    "test-jest:watch": "jest --watch"
   },
   "browserslist": [
     "last 2 versions",
